# tensorflow

tensorflow/lite/examples/anomaly_detection/: BUILD  CMakeLists.txt  README.md  anomaly_app.cc  anomaly_app.h  cpu_anomaly_model.tflite  memory_anomaly_model.tflite
tensorflow/lite/examples/anomaly_detection/nlohmann_json/: json.hpp
